fix(ui): make menu items wrap on smaller screens

--- a/themes/detour/assets/css/critical.css
+++ b/themes/detour/assets/css/critical.css
@@ -275,11 +275,12 @@ ul {
 }
 .inline-list {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   align-items: baseline;
 }
   .inline-list > li {
-    margin: 0 1em 0 0;
+    margin: 0 1em 1em 0;
     white-space: nowrap;
   }
 
